@@ -1,8 +1,83 @@
+#
+# This is a sample configuration for grossd
+#
+# This file includes all valid configuration parameters, with their
+# default values. All the default values are commented out, so any 
+# all lines not commented out change the default settings. 
+# 
+# you can also add comments after a line 	# this is a comment
+
+
+# 'host' is the address the server should listen for queries
+# host = localhost
+
+# 'port' is the port the server should listen for queries
+# port = 1111
+
+# 'stat_level' is the name of the requested statistic. There can be multiple
+# 'stat_level' options in the configuration file (Using both none and full is
+# undefined). Default is none. Valid options are currently:
+# full: grossd sends all possible statistics
+# none: no statistics at all
+# status: basic statistics set
+# since_startup: basic set since the startup 
+# delay: processing delay statistics
+stat_level = status
+stat_level = delay
+
+# 'stat_interval' is the number of seconds between status log entries
+# stat_interval = 3600
+
+# 'filter_bits' is the size of the bloom filter. Size will be 2^filter_bits
+# filter_bits = 22
+
+# 'number_buffers' is the number of filters used in the ring queue
+# number_buffers = 8
+
+# 'rotate_interval' is the number of seconds between filter rotation.
+# Let N := 'number_buffers' and I := 'rotate_interval'. An entry will
+# stay in the servers' memory for (N - 0.5) * I seconds in average. 
+# rotate_interval = 3600
+
+# 'sync_peer' is the address of the peer used in clustered mode
+# sync_peer = 
+
+# 'sync_port' is the port number to listen to and connect to in 
+# communication with the peer. 
+# sync_port = 1112
+
+# 'statefile' is path of the file that the server will store the
+# state information. 
+# statefile = 
+
+# 'log_method' is used to list all the possible logging facilities.
+# currently only syslog is implemented
+# log_method = syslog
+
+# 'log_level' Possible log levels are 'debug', 'info', 'notice'
+# 'warning' and 'error'.
+# log_level = info
+
+# 'syslog_facility' is the facility syslog sends log messages with.
+# syslog_facility = mail
+
+# 'update' is the way server updates the database. Valid options are
+# 'grey' and 'always'. If 'update = grey' grossd will update the database
+# only if response is STATUS_GREY 
+# update = grey
+
+# 'grey_mask' is the mask for grossd to use when matching client_ip
+# against the database. You may set it to 24 to treat  addresses
+# like a.b.c.d as a.b.c.0.
+# grey_mask = 0
+
+# 'check' lists all the checks grossd will do to judge if client_ip is
+# suspicious or not. 'dnsbl' is the only implemented check.
+# check = dnsbl
+
+# 'dnsbl' is a dns domain name of the dnsbl that 'dnsbl' check will query
 dnsbl = bl.spamcop.net 
 dnsbl = sbl.spamhaus.org
 dnsbl = dnsbl.njabl.org
 dnsbl = cbl.abuseat.org
 dnsbl = xbl.smaphaus.org
-host = 127.0.0.1 	# default
-port = 1111		# default
-stat_level = status
