@@ -149,6 +149,7 @@ typedef struct {
 	int acctmask;
 	int flags;
 	int checks;
+	int grey_mask;
 #if PROTOCOL == SJSMS
 	sjsms_config_t sjsms;
 #endif /* PROTOCOL == SJSMS */
