@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006 Eino Tuominen <eino@utu.fi>
+ * Copyright (c) 2006,2007 Eino Tuominen <eino@utu.fi>
  *
  * Permission to use, copy, modify, and distribute this software for any
  * purpose with or without fee is hereby granted, provided that the above
