@@ -1,6 +1,7 @@
 /* -*- mode:c; coding:utf-8 -*-
  *
- * Copyright (c) 2006 Antti Siira <antti@utu.fi>
+ * Copyright (c) 2006,2007
+ *                    Antti Siira <antti@utu.fi>
  *                    Eino Tuominen <eino@utu.fi>
  *
  * Permission to use, copy, modify, and distribute this software for any
